--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fl_chart: ^0.63.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  local_auth: ^1.1.9
 
 dev_dependencies:
   flutter_test:
