changing git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/encryption_public_key.pem
+/manxel.jks
+/output.zip
+/pepk.jar
 
 # Symbolication related
 app.*.symbols
