--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   local_auth: ^1.1.9
   cached_network_image: ^3.3.0
   image_picker: ^1.0.4
+#  path_provider: ^2.1.1
+  flutter_file_downloader: ^1.1.4
 
 dev_dependencies:
   flutter_test:
